--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
+    "posthog-js": "^1.257.2",
+    "posthog-node": "^5.6.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
