--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.8.16",
     "pg": "^8.16.0",
     "posthog-js": "^1.257.2",
     "posthog-node": "^5.6.0",
