--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^19.0.0",
     "react-filepond": "^7.1.3",
     "react-hook-form": "^7.58.1",
+    "react-resizable-panels": "^3.0.4",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
